Fix: Corrected the alignment of `CookieConsentV2` buttons on mobile devices. The issue was discovered post-merge. Given its only minor, I don't believe the original developer is responsible for fixing it.

--- a/frontend-next-migration/src/features/CookieConsentV2/CookieConsentV2.module.scss
+++ b/frontend-next-migration/src/features/CookieConsentV2/CookieConsentV2.module.scss
@@ -18,7 +18,8 @@
     box-sizing: border-box;
     box-shadow: 8px 8px 1px #000000;
 }
-.cookieConsentV2 button + button {
+
+.cookieConsentV2 button+button {
     margin-left: 15px;
 }
 
@@ -107,6 +108,11 @@
         width: 90%;
     }
 
+    .cookieConsentV2 button+button {
+        margin-left: 0px;
+        padding-top: 10px;
+    }
+
     .cookieConsentContent {
         flex-direction: column;
         width: 333px;
@@ -141,6 +147,11 @@
 @media (max-width: breakpoint(sm)) {
     .cookieConsentV2 {
         width: 88%;
+    }
+
+    .cookieConsentV2 button+button {
+        margin-left: 0px;
+        margin-top: 10px;
     }
 
     .cookieConsentContent {
